tests/baselines/reference/readonlyInNonPropertyParameters.errors.txt
tests/cases/compiler/readonlyInNonPropertyParameters.ts(3,9): error TS2369: A parameter property is only allowed in a constructor implementation.
tests/cases/compiler/readonlyInNonPropertyParameters.ts(4,6): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/compiler/readonlyInNonPropertyParameters.ts(4,8): error TS2369: A parameter property is only allowed in a constructor implementation.
tests/cases/compiler/readonlyInNonPropertyParameters.ts(6,2): error TS2369: A parameter property is only allowed in a constructor implementation.


==== tests/cases/compiler/readonlyInNonPropertyParameters.ts (4 errors) ====
    // `readonly` won't work outside of property parameters
    class X {
    	method(readonly x: number) {}
    	       ~~~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    	set x(readonly value: number) {}
    	    ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    	      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }
    (readonly x) => 0;
     ~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    // OK to use `readonly` as a name
    (readonly) => 0;